# gcab

./: .gitattributes  .gitignore  .version  ChangeLog  Makefile.am  Makefile.in  Makefile.orig  Makefile.orig.in  Portfile  README  aclocal.m4  atconfig  atlocal  config.h.in  configure  configure.ac  configure.scan  gcab.1  gcab.spec  libgcab-1.0.pc  libgcab-1.0.vapi  sources
.github/workflows/: codeql.yml
docs/: Makefile.in
docs/reference/: Makefile.in  gcab-docs.sgml
docs/reference/html/: GCabCabinet.html  GCabFile.html  GCabFolder.html  annotation-glossary.html  api-index-full.html  ch01.html  deprecated-api-index.html  gcab.devhelp2  index.html  index.sgml  object-tree.html
libgcab/: .gitignore  Makefile.am  Makefile.in  gcab-enums.c  gcab-enums.h
m4/: aclocal.m4  intltool.m4  manywarnings-objc.m4  manywarnings.m4
po/: .gitignore  ChangeLog  Makefile.in  Makefile.in.in  POTFILES  de.gmo  es.gmo  pl.gmo  pt_BR.gmo  sl.gmo  sr.gmo  sr@latin.gmo
reference/: .gitignore
tests/: package.m4  testsuite
